<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.popularmovies.MoviePosterDetailActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_movie_poster_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarActionBarTheme"
            app:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_movie_poster_detail"
            tools:text="@string/sample_movie_title_string"/>

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_original_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
            tools:src="@drawable/ic_sample_movie_poster"
            android:contentDescription="@string/movie_poster_content_description"/>

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/release_date_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label"
            tools:text="@string/sample_movie_release_date_string"/>

        <TextView
            android:id="@+id/tv_user_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_rating_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"/>

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_user_rating_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_rating_label"
            tools:text="@string/sample_movie_rating_string"/>

        <!-- I'll probably make another layout for landscape mode and move this text view next
             to the movie poster instead of underneath.
        -->
        <TextView
            android:id="@+id/tv_movie_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sample_movie_synopsis_string"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
            app:layout_constraintVertical_bias="1.0"/>

    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>